---------------------------------------------------------------------------------------------------
Version: 1.20.0
Date: 2023-07-??

  Features:
    - Worked with Shinzou to integrate the HD graphic pack  and some of  its features.
    - Added Infested Command Centre, have higher chance to spawn suicidal units.
    - Added Broodling, spawn from queen. 80 DPS @ L20
    - Added Scourge, spawn from overlord. 250 damage @ L20
    - Introducing timed unit subsystem
    - Broodling and Scourge only live for 2 minutes game time.
    - Updated units to use new dynamic attack range system

  Changes:
    - Changed boss despawn attack parameters.
    - Buffed hydralisk damage @ L20 from 80 to 100.
    - Buffed mutalisk damage @ L20 from 100 to 120.
    - Buffed infested terran damage @ L20 from 120 to 500, adjusted its spawn rates and pollution consumption.
    - Queens have 100% to spawn 2 broodlings, 33% to spawn 3 broodlings, 10% to spawn 5 broodlings at source location, per attack.
    - Queen's acid attack now lower to 50% to spawn.
    - Guardian has 33% to spawn a scourge when it attacks.
    - Devourer has 50% to spawn a scourge when it attacks.
    - Overlord have 100% to spawn 3 broodlings, 80% to a higher tier unit, 10% to spawn 2 scourges and zerglings.
    - Changed short range sunker from 14 to 15 range.
    - Adjusted spawn table for various structures
    - Updated unit for dynamic attack range

  Graphics:
    - Removed integration animation for unit-spawners, not applicable and cause unintended affect on HD graphic.
    - Fixed shadows after integration animation removal.
    - Changed explosion animation_speed to 0.2 (12fps)
    - Changed death animation_speed to 0.15 (9fps)
    - Changed run, attack animation_speed to 0.5 (30fps)
    - Removed purple dying explosion on some units.


---------------------------------------------------------------------------------------------------
Version: 1.19.0
Date: 2023-03-12

  Features: