@@ -4,7 +4,7 @@
   "date": "2021-07-10",
   "title": "ERM - Zerg Units",
   "author": "heyqule",
-  "description": "Add zerg to enemy units",
+  "description": "Add zerg as a new enemy force",
   "factorio_version": "1.1",
   "dependencies": [
     "base >= 1.1.0",
