@@ -52,7 +52,7 @@ local base_movement_speed = 0.125
 local incremental_movement_speed = 0.1
 
 -- Misc settings
-local vision_distance = 30
+local vision_distance = ERM_UnitHelper.get_vision_distance(attack_range)
 local pollution_to_join_attack = 10
 local distraction_cooldown = 300
 
